production/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loss-tracker-nginx-client 
  namespace: losstracker
spec:
  selector:
    matchLabels:
      run: loss-tracker-nginx-client
  replicas: 1
  template:
    metadata:
      labels:
        run: loss-tracker-nginx-client
    spec:
      containers:
        - image: symlon/loss-tracker:client
          imagePullPolicy: Always
          name: loss-tracker-nginx-client
          ports:
          - containerPort: 80
      imagePullSecrets:
        - name: regcred
