production/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loss-tracker-nginx-client
  namespace: losstracker
  labels:
    run: loss-tracker-nginx-client
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
      #type: LoadBalancer
  selector:
    run: loss-tracker-nginx-client
