production/traefik_ingress.yaml
# Middleware to rewrite /api paths
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: rewriteapi
  namespace: losstracker
spec:
  replacePathRegex:
    regex: "^/api/(.*)"
    replacement: "/$1"

---
# Ingress for /api/socket
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socket-ingress
  namespace: losstracker
spec:
  ingressClassName: traefik
  rules:
    - host: mlstatstracker.org
      http:
        paths:
          - path: /api/socket
            pathType: Prefix
            backend:
              service:
                name: load-balancer-server
                port:
                  number: 5005

---
# Ingress for /api with middleware to rewrite paths
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-backend-ingress
  namespace: losstracker
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: losstracker/rewriteapi
spec:
  ingressClassName: traefik
  rules:
    - host: mlstatstracker.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: load-balancer-server
                port:
                  number: 5005

---
# Ingress for frontend (root path)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: losstracker
spec:
  ingressClassName: traefik
  rules:
    - host: mlstatstracker.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loss-tracker-nginx-client
                port:
                  number: 80
